--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -13,18 +13,8 @@
 
 <h1>Drag in the calendar to indicate your availability</h1>
 <% form_for @meeting do |meeting_form| %>
-  <div id="avail_fields">
-  <br />
-  <% for availability in @meeting.availabilities %>
-    <%= meeting_form.fields_for :availabilities do |avail_form| %>
-      Start: <%= avail_form.text_field :start %> <br />
-      End: <%= avail_form.text_field :end %> <br />
-      Duration: <%= avail_form.text_field :duration %> <br />
-    <% end %>
-  <% end %>
+  <div id="calendar-form">
   </div>
-  <a href="#" id="new_avail">+Add timeslot</a>
-  <br />
-  <br /> <%= meeting_form.submit %>
+  <%= meeting_form.submit %>
 <% end %>
 <div id='calendar'></div>
