Rename a couple of files

--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -1,14 +1,14 @@
 <% content_for :additional_styles do %>
 	<link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css' />
 	<link rel='stylesheet' type='text/css' href='/stylesheets/jquery.weekcalendar.css' />
-	<link rel='stylesheet' type='text/css' href='/stylesheets/new.css' />
+	<link rel='stylesheet' type='text/css' href='/stylesheets/meeting.css' />
 <% end %>
 
 <% content_for :additional_scripts do %>
     <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js'></script>
 	<script type="text/javascript" src="/javascripts/date.js"></script>
 	<script type='text/javascript' src='/javascripts/jquery.weekcalendar.js'></script>
-	<script type='text/javascript' src='/javascripts/new.js'></script>
+	<script type='text/javascript' src='/javascripts/meeting.js'></script>
 <% end %>
 
 <div id="calendar-data">
