--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 <!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-
+<meta name="google-site-verification" content="hVj0PYOFSy6hVteQrsgAIHkUUEPlVwvk17Tr5FA81GI" />
   <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
        Remove this if you use the .htaccess -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -44,7 +44,12 @@
         <span id="logo">schdl me</span>
     </header>
     <div id="main" role="main">
-        <%= yield %>
+      <% if user_signed_in? %>
+         <%= current_user.email %> | <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>        
+      <% else %>
+        <%= link_to 'Login with Google', user_omniauth_authorize_path(:google) %>  
+      <% end %>
+      <%= yield %>
     </div>
     <footer>
 
@@ -54,8 +59,12 @@
 
   <!-- JavaScript at the bottom for fast page loading -->
 
+
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if necessary -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
+ <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
+-->  
+
+  <%= javascript_include_tag "jquery", "jquery_ujs" %>
   <script>window.jQuery || document.write("<script src='/javascripts/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
 
 
@@ -64,7 +73,6 @@
   <script src="/javascripts/application.js"></script>
   <%= yield :additional_scripts %>
   <!-- end scripts-->
-
 
   <!--[if lt IE 7 ]>
     <script src="/javascripts/libs/dd_belatedpng.js"></script>
