Several changes going in here 1) Let users authenticate with Google (lays the groundwork for pulling calendar info from Google Calendar) 2) Create UUID for meetings so I can send to other users without them having to log in. 3) Added jquery_ujs driver to so that all JS can be driven by single source.

--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <h1>Drag in the calendar to indicate your availability</h1>
-<% form_for @meeting do |meeting_form| %>
+<%= form_for @meeting do |meeting_form| %>
   <div id="calendar-form">
   </div>
   <%= meeting_form.submit %>
