--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
       <% if user_signed_in? %>
          <%= current_user.email %> | <%= link_to 'Logout', destroy_user_session_path, :method => :delete %>        
       <% else %>
-        <%= link_to 'Login with Google', user_omniauth_authorize_path(:google) %>  
+        <%= link_to 'Login with Google', user_omniauth_authorize_path(:google_hybrid) %>  
       <% end %>
       <%= yield %>
     </div>
